<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">PHOTO MODE</string>
    <string name="skip">SKIP</string>
    <string name="explore">NEW</string>
    <string name="collections">COLLECTIONS</string>
    <string name="me">ME</string>
    <string name="camera">CAMERA</string>
    <string name="camera_info">Taken by <xliff:g id="camera">%s</xliff:g> with exposure time: <xliff:g id="exposure_time">%s</xliff:g>
        , aperture: <xliff:g id="aperture">%s</xliff:g>, focal length: <xliff:g id="focal_length">%s</xliff:g>
        , iso: <xliff:g id="iso">%s</xliff:g>
    </string>
    <string name="related_pictures">OTHER PICTURES</string>
    <string name="related_collections">RELATED COLLECTIONS</string>
    <string name="user_name">USER NAME</string>
    <string name="action_settings">SETTINGS</string>
    <string name="my_download">MY DOWNLOAD</string>
    <string name="my_collections">MY COLLECTION</string>
    <string name="no_content">NO CONTENT</string>
    <string name="please_check_network">Please check your netowrk</string>
    <string name="collect_already">Collected Already</string>
    <string name="collect_success">Collect Success</string>
    <string name="collect">COLLECT</string>
    <string name="share">SHARE</string>
    <string name="photos">PHOTOS</string>
    <string name="delete_success">Delete Success</string>
    <string name="manage">MANAGE</string>
    <string name="manage_complete">COMPLETE</string>
    <string name="download_already">Download Already</string>
    <string name="download_success">Download Success</string>
    <string name="download_fail">Download Fail</string>
    <string name="download_large_pic_by_mobile">Download High Quality Photo Using Mobile Network</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="picture_path">Photo Storage Path</string>
    <string name="picture_size">Storage Photo Size</string>
    <string name="app_version">App Version</string>
    <string name="about_app">About app</string>
    <string name="clear_cache_success">Clear Cache Success</string>
    <string name="about_first">Thank Unsplash for the high quality photos</string>
    <string name="about_second">Photo Mode is a photo gallery app for users to browse high quality photos provided by Unsplash and all the photos can be downloaded</string>
    <string name="about_third">Photo Mode is developed by FBi when he is bored during the vacation. Because FBi likes browsing high quality photos provided by Unsplash, but there is not an official app, as a result, FBi programs this simple app</string>
    <string name="about_fourth">Due to the short vacation, the first version of this app is somewhat simple, em, FBi will try his best effort to improve and perfect this app in the future work</string>
    <string name="about_fifth_content">Tips: all photos are in high quality, so be patient and using WIFI</string>
    <string name="set_wallpaper_success">Set wallpaper successfully</string>
    <string name="set_wallpaper_fail">Set wallpaper failed, Try again later</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="set_wallpaper_already">Set wallpaper already</string>
    <string name="time">PUBLISH TIME</string>
    <string name="dimension">DIMENSIONS</string>
    <string name="model">MODEL</string>
    <string name="exposure_time">EXPOSURE TIME</string>
    <string name="aperture">APERTURE</string>
    <string name="focal_length">FOCAL LENGTH</string>
    <string name="iso">ISO</string>
    <string name="confirm">CONFIRM</string>
    <string name="pic_title_info">PHOTO DETAILS</string>
    <string name="share_picture_title"> A Masterpiece From <xliff:g id="name">%s</xliff:g></string>
    <string name="share_collection_title"> A Masterpiece From <xliff:g id="name">%s</xliff:g></string>
    <string name="please_grant_storage_permission">Please grant us the storage permission</string>
    <string name="action_filter">Sort</string>
    <string name="action_search">Search</string>
    <string name="newest">Newest</string>
    <string name="search_title">Search photos or collections</string>
    <string name="photo">Photo</string>
    <string name="search_photo_collection">Search photos or collections</string>

</resources>
